samples/_failures_safe/1761255594_0254fd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0db0789f.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_0db0789f.c:164:14: error: ‘TOKEN_’ undeclared (first use in this function)
  164 |         case TOKEN_
      |              ^~~~~~
./samples/SAFE/__tmp_0db0789f.c:164:14: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_0db0789f.c:164:9: error: expected ‘:’ or ‘...’ at end of input
  164 |         case TOKEN_
      |         ^~~~
./samples/SAFE/__tmp_0db0789f.c:164:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0db0789f.c:164:9: error: expected declaration or statement at end of input
